add_review.html - fix error - images don't maintain their aspect - wrap image inside div style.css - add image-container img

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -304,6 +304,17 @@ main {
 
 .image-container {
     position: relative;
+    overflow: hidden;
+    padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+}
+
+.image-container img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .image-flash {
